--- a/_posts/2018-06-03-cors.markdown
+++ b/_posts/2018-06-03-cors.markdown
@@ -16,9 +16,9 @@ CORS (Cross-Origin Resource Sharing) is subject tinged with dread for many web d
   <figcaption>"No 'Access-Control-Allow-Origin' header is present on the requested resource. Origin 'https://example.com' is therefore not allowed access."</figcaption>
 </figure>
 
-Whether it's fetching a bit of JSON, or attempting to configure a CDN for your media assets, CORS seems to make itself a bother at all the wrong times. And so developers have learned to placate CORS, allowing it to garner a reputation as nuisance that, somehow, makes our users more secure.
+Whether it's fetching a bit of JSON, or attempting to configure a CDN for your media assets, CORS seems to make itself a bother at all the wrong times. And so developers have learned to placate CORS, allowing it to garner a reputation as a nuisance that, somehow, makes our users more secure.
 
-This post aims to demystify CORS and show it's lighter side–as a specification that didn't set out to hamper the aspirations of web developers everywhere, but instead to loose us from the grip of the _same-origin policy_. We'll go through each of the headers necessary to properly satisfy CORS constraints, and also discuss a couple places where CORS is now relevant but which may surprise you.
+This post aims to demystify CORS and show its lighter side–as a specification that didn't set out to hamper the aspirations of web developers everywhere, but instead to loose us from the grip of the _same-origin policy_. We'll go through each of the headers necessary to properly satisfy CORS constraints, and also discuss a couple places where CORS is now relevant but which may surprise you.
 
 ### A Brief History of CORS
 
@@ -28,7 +28,7 @@ Yet when XMLHttpRequest first arrived on the scene it had a significant limitati
 
 As AJAX picked up steam it became apparent that something had to be done about XMLHttpRequest and its same-origin straightjacket. The web development community saw how opening up AJAX to other domains could give rise to new services and ways to use the web, which (spoiler alert) it did in the likes of Firebase, Mixpanel, New Relic, and more. At about this same time (2005) people began to cheat the system using something called [JSONP](https://en.wikipedia.org/wiki/JSONP){:target="_blank"}, which essentially hijacked the `<script>` tag (and its rather lax resource security policy) to query data from remote services. 
 
-In 2005 [the first draft](https://www.w3.org/TR/2005/NOTE-access-control-20050613/){:target="_blank"} of what would become the CORS specification was published. Yet it wouldn't be until 2007 that major aspects of the specification began to take shape, such as the "preflight" mechanism and the usage of HTTP headers versus XML markup, and another seven years after that before it became a [W3C recommendation](https://www.w3.org/TR/2014/REC-cors-20140116/){:target="_blank"}. By that time, however, browsers had already begun implementing the stabler parts of the spec.
+In 2005 [the first draft](https://www.w3.org/TR/2005/NOTE-access-control-20050613/){:target="_blank"} of what would become the CORS specification was published. Yet it wouldn't be until 2007 that major aspects of the specification began to take shape, such as the "preflight" mechanism and the usage of HTTP headers versus XML markup, and another seven years after that before it became a [W3C recommendation](https://www.w3.org/TR/2014/REC-cors-20140116/){:target="_blank"}. By that time, however, browsers had already begun implementing the more stable parts of the spec.
 
 Writing specifications is no easy task, but you wouldn't be blamed for asking why this one took a decade. When you consider the security implications surrounding CORS, however, it makes a bit more sense. Of chief concern was the fact that most, if not all, web services expected non-GET requests to originate from specific domains (usually owned by the same folks that owned the service in question, given that the same-origin policy was still the law of the land). If CORS were implemented, however, and the same-origin policy for XMLHttpRequests relaxed, said services could now receive a deluge of DELETE, PUT, etc... requests from _any origin_, and it wasn't reasonable to expect every public-facing web service to adapt to CORS prior to its recommendation by the W3C. 
 
