--- a/_posts/2018-06-03-cors.markdown
+++ b/_posts/2018-06-03-cors.markdown
@@ -2,6 +2,7 @@
 layout: post
 title:  "CORS"
 date:   2018-06-03 08:00:00 -0700
+dateString: "June 3rd, 2018"
 categories: security
 hero: /public/svg/sailor-outline.svg
 ogShareImage: /public/img/cors_og_image.png
